2019-02-15  Florian Weimer  <fweimer@redhat.com>

	Check that non-sysdeps headers have wrapper headers.
	* scripts/check-wrapper-headers.py: New file.
	* Makefile (tests-special): Add check-wrapper-headers.out.
	(check-wrapper-headers.out): New target.
	* Rules (tests-special): Add check-wrapper-headers.out.
	(check-wrapper-headers.out): New target.

2019-02-15  Florian Weimer  <fweimer@redhat.com>

	Add missing header wrappers under include/.
	* include/ar.h: New file.
	* include/bits/mqueue2.h: Likewise.
	* include/bits/stdio.h: Likewise.
	* include/bits/stdio2.h: Likewise.
	* include/fstab.h: Likewise.
	* include/fts.h: Likewise.
	* include/lastlog.h: Likewise.
	* include/netinet/icmp6.h: Likewise.
	* include/netinet/igmp.h: Likewise.
	* include/netinet/ip6.h: Likewise.
	* include/re_comp.h: Likewise.
	* include/regexp.h: Likewise.
	* include/rpcsvc/bootparam.h: Likewise.
	* include/rpcsvc/yp_prot.h: Likewise.
	* include/sys/random.h: Likewise.
	* include/sys/stropts.h: Likewise.
	* include/sys/ttychars.h: Likewise.
	* include/sys/vfs.h: Likewise.
	* include/wait.h: Likewise.

2019-02-15  Florian Weimer  <fweimer@redhat.com>

	* nptl_db/proc_service.h: Move to ...
	* sysdeps/nptl/proc_service.h: ... here.
	* nptl_db/thread_db.h: Move to ...
	* sysdeps/nptl/thread_db.h: ... here.
	* nptl/descr.h: Include <thread_db.h>.

2019-02-15  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* io/Makefile (tests): Add tst-lockf.
	* io/lockf.c (lockf): Use __fcntl and only define for
	!__OFF_T_MATCHES_OFF64_T.
	* io/lockf64.c (__lockf64): Call __fcntl64 and alias to lockf for
	__OFF_T_MATCHES_OFF64_T case.
	* io/tst-lockf.c: New file.
	* sysdeps/unix/sysv/linux/i386/lockf64.c: Remove file.
	* sysdeps/unix/sysv/linux/arm/lockf64.c: Likewise.
	* sysdeps/unix/sysv/linux/m68k/lockf64.c: Likewise.
	* sysdeps/unix/sysv/linux/mips/mips32/lockf64.c: Likewise.
	* sysdeps/unix/sysv/linux/mips/mips64/n32/lockf64.c: Likewise.